--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Django>=4.2
-djangorestframework
-psycopg2-binary
+asgiref==3.8.1
+Django==5.2.1
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
+tzdata==2025.2
